--- a/css/style.css
+++ b/css/style.css
@@ -132,4 +132,29 @@ font-family: 'Oxygen', sans-serif;
     border-radius: 10px;
     display:inline-block;
 }
+.cities-report{
+    background-color: rgba(255,255,0,0.5);
+    border: rgb(255,255,0) 2px solid;
+    border-radius: 10px;
+    display:inline-block;
+}
+.cities-report hr{
+    border-top: 1px solid #363b4d;
+    width: 95%;
+}
+.cities-positive{
+    background-color: lightgreen;
+    border: green 2px solid;
+    border-radius: 10px;
+    display:inline-block;
+    margin:5px;
+}
+.cities-negative{
+    background-color: rgba(244,67,54,0.5);
+    border: #f44336 2px solid;
+    border-radius: 10px;
+    display:inline-block;
+    margin:5px;
+}
+
 /*DATA OUTPUT STYLES END*/
